# BankApp

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc  test.cpp  test_api.hpp  vcpkg.json
backend/: Api.cpp  Api.hpp
core/: Bills.cpp  Bills.hpp  Bonus.cpp  Bonus.hpp  Cards.cpp  Cards.hpp  Credits.cpp  Credits.hpp  Documents.cpp  Documents.hpp  History.hpp  Login.cpp  Login.h  Login.hpp  Signup.cpp  Signup.hpp  User.cpp  User.hpp  utils.cpp  utils.hpp
frontend/: Bill.qml  BillsView.qml  Bonus.qml  BonusView.qml  Card.qml  CardsView.qml  Credit.qml  CreditsView.qml  Details.qml  Document.qml  DocumentsView.qml  GetCredentials.qml  GetString.qml  History.qml  KreditsView.qml  LoginPage.qml  LoginPageCode.qml  Main.qml  MainPage.qml  NewCard.qml  PopUpInfo.qml  PopUpWarning.qml  SignupPage.qml  SignupPageCode.qml
scripts/: update_qrc.py
